Fix spacing above the first item in the page body

--- a/src/styles/main/_generics.scss
+++ b/src/styles/main/_generics.scss
@@ -236,6 +236,12 @@ p.etna-small-paragraph {
   > :first-child {
     margin-top: spacing.space(3);
   }
+
+  > [class^="tna-heading-"]:first-child,
+  > [class*=" tna-heading-"]:first-child,
+  > .tna-section:first-child {
+    margin-top: 0;
+  }
 }
 
 .tna-background-accent-light + .tna-background-accent,
